--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.26.1",
+    "bcrypt": "^5.0.1",
     "cra-template": "1.1.3",
     "formik": "^2.2.9",
     "lodash": "^4.17.21",
